# Incalmo

./: .dockerignore  .env.example  .gitignore  CITATION.cff  README.md  build_docker.sh  clouds_example.yaml  docker-compose.yml  environment.yml  incalmo.py  main.py  perry.py  perry_docker.py  pyproject.toml  pyrightconfig.json  test_api.py
attacker/: Attacker.py  __init__.py  attacker_controller.Dockerfile  attacker_host.Dockerfile  incalmo.Dockerfile  incalmo.py  pyproject.toml  server.py  start.sh  test_api.py
attacker/api/: results.py  server_api.py  test_api.py
attacker/attack_server/: .gitignore
attacker/attack_server/app/: deception_api.py  deception_gui.py  deception_svc.py
attacker/attack_server/app/actions/: HighLevelAction.py  LowLevelAction.py
attacker/attack_server/app/helpers/: ability_helpers.py
attacker/attack_server/payloads/: downloadAgent.sh  runDeployAgent.sh  runHackerAgent.sh
attacker/c2_server/: Instruction.py  requirements.txt  server.py
attacker/c2_server/payloads/: test_attack.txt
attacker/c2server/: c2server.py
attacker/c2server/payloads/: strutsExploit.py  writeable_passwd.sh
attacker/config/: attacker_config.py  config.json  settings.py
attacker/incalmo/: hook.py  legacy_api.py
attacker/incalmo/actions/: LowLevelAction.py  high_level_action.py  low_level_action.py
attacker/incalmo/data/: .gitignore  attacker_config.py
attacker/incalmo/helpers/: agent_helpers.py  logging.py
attacker/incalmo/parsers/: bashoutput.py  cat.py  ls.py  md5sum.py
attacker/incalmo/payloads/: sudo_baron_exploit.py  sudoedit_exploit.sh
attacker/incalmo/services/: __init__.py  attack_graph_service.py  config_service.py  environment_initializer.py  environment_state_service.py  high_level_action_orchestrator.py  logging_service.py  low_level_action_orchestrator.py
attacker/incalmo/strategies/: debug.py  perry_strategy.py  struts_strategy.py
attacker/models/: command.py  instruction.py
cli/: attacker.py  dev.py  (+4 more)
(+740 files in other folders)
