[project]
name = "incalmo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.52.0",
    "celery>=5.5.3",
    "click>=8.1.8",
    "flask-cors>=6.0.0",
    "debugpy>=1.8.14",
    "flask[async]>=3.1.0",
    "google-generativeai>=0.8.5",
    "marshmallow>=4.0.0",
    "openai>=1.84.0",
    "psutil>=7.0.0",
    "pydantic>=2.11.4",
    "pydantic-settings>=2.9.1",
    "redis>=6.2.0",
    "requests>=2.32.3",
    "structlog>=25.3.0",
    "langchain>=0.3.25",
    "langchain-openai>=0.3.24",
    "langchain-anthropic>=0.3.15",
    "langchain-google-genai>=2.0.10",
    "langchain-deepseek>=0.1.3",
]

[dependency-groups]
dev = [
    "ruff>=0.11.11",
]
