[project]
name = "attacker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.51.0",
    "click>=8.1.8",
    "flask[async]>=3.1.0",
    "marshmallow>=4.0.0",
    "pydantic>=2.11.4",
    "pydantic-settings>=2.9.1",
    "requests>=2.32.3",
]

[dependency-groups]
dev = [
    "ruff>=0.11.9",
]
